Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs


(02/25/14) - Improvements - Version 1.9.5.2

[+] Added admin notice for when Responsive 2.0 releases
[+] Added missing text domain
[+] Added skip link
[*] Changed widget menu class to WordPress standards
[*] Tweeked "Posted on" time info
[*] Updated screenshot
[*] Updated translations

----

(02/13/14) - Improvements - Version 1.9.5.1

[!] Fixed widget bug

----

(02/09/14) - Improvements - Version 1.9.5.0

[+] Added support for minified css version
[*] Restructured CSS files - moved styles to core/css/
[*] Dispaly plugin install notification only on theme.php
[*] Customized theme activation notice
[^] Moved sidebar functions in functions-sidebar.php

----

(02/02/14) - Improvements - Version 1.9.4.9

[+] Updated to new social icon function

----

(01/28/14) - Improvements - Version 1.9.4.7-8

[*] Allow for gallery image size can be defined
[!] Fixed disabling breadcrumbs

----

(01/19/14) - Improvements - Version 1.9.4.6

[*] Improved Responsive Breadcrumbs
[+] Added support for Breadcrumb NavXT, Breadcrum Trail and Yoast SEO
breadcrumbs.

----

(01/12/14) - Improvements - Version 1.9.4.5

[*] Made Theme Options responsive
[*] Update coyright to 2014
[x] Removed old code in header.php

----

(01/07/14) - Improvements - Version 1.9.4.4

[+] Added improved support gallery images
[x] Removed old tags

----

(12/22/13) - Improvements - Version 1.9.4.3

[+] Allow switching minified scripts with SCRIPT_DEBUG
[x] Removed code for Backward Compatibility of WP 3.4
[*] Improved responsive_widget_menu_class as suggested by markoheijnen
[*] Allow Stylesheet version update automatically.
[!] Fix disabling breadcrumbs

----

(12/15/13) - Improvements - Version 1.9.4.2

[+] Made search form accessible
[*] Updated screenshot to 880x660px
[*] Moved breadcrumb check from template to functions.php
[*] Updated responsive.pot
[*] Updated links from themeid.com to cyberchimps.com
