@@ -252,6 +252,7 @@ Class Responsive_Options {
 	 */
 	public static function valid_layouts() {
 		$layouts = array(
+			'default'                   => __( 'Default', 'responsive' ),
 			'content-sidebar-page'      => __( 'Content/Sidebar', 'responsive' ),
 			'sidebar-content-page'      => __( 'Sidebar/Content', 'responsive' ),
 			'content-sidebar-half-page' => __( 'Content/Sidebar Half Page', 'responsive' ),
