@@ -18,7 +18,7 @@ require( $template_directory . '/core/includes/functions.php' );
 require( $template_directory . '/core/includes/functions-update.php' );
 require( $template_directory . '/core/includes/functions-sidebar.php' );
 require( $template_directory . '/core/includes/functions-install.php' );
-require( $template_directory . '/core/includes/theme-options.php' );
+require( $template_directory . '/core/includes/theme-options/theme-options.php' );
 require( $template_directory . '/core/includes/post-custom-meta.php' );
 require( $template_directory . '/core/includes/tha-theme-hooks.php' );
 require( $template_directory . '/core/includes/hooks.php' );
