@@ -8,6 +8,13 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(03/14/14) - Improvements - Version 1.9.5.3
+
+[*] Updated other cyberchimps page
+[^] Moved theme options to own folder
+[!] Fixed loading correct sidebar when using post templates
+
+----
 
 (02/25/14) - Improvements - Version 1.9.5.2
 
